@@ -8,12 +8,18 @@
   <div layout="column" class="layout-fill sg-reversible">
     <md-card style="overflow: hidden">
       <md-card-actions flex-none="flex-none" layout="row" layout-align="end center">
+        <md-button ng-click="toggleCenter()"
+                   class="md-icon-button md-primary md-hue-1 hide show-gt-xs"
+                   aria-hidden="true">
+          <md-icon class="icon-fullscreen"
+                   ng-class="{ 'icon-fullscreen-exit': centerIsClose }"><!-- fullscreen --></md-icon>
+        </md-button>
+        <div class="md-flex"><!-- spacer --></div>
         <md-button class="md-icon-button"
                    label:aria-label="Cancel"
                    ng-click="editor.cancel()">
           <md-icon>close</md-icon>
         </md-button>
-        <div class="md-flex"><!-- spacer --></div>
         <md-button class="md-icon-button"
                    label:aria-label="Reset"
                    ng-click="editor.reset()">
